outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_00-37-10/evaluations/problem_eval647917497598223170_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance to closeness to the destination (weighted by 0.3), balancing detour minimization and directed path guidance.}
                                                                                                                           ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance to closeness to the destination (weighted by 0.3), balancing detour minimization and directed path guidance.}
                                                                                                                           ^
SyntaxError: unmatched '}'
